--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,19 @@
+/* Asterick selector*/
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* General Project styles */
+    color: #3a3a3a;
+
 }
 
 header {
@@ -9,6 +21,7 @@ header {
 }
 main {
     background-color: lightblue;
+    flex: 1 0 auto;
 }
 
 footer {
