--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* Google font import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
 /* Asterick selector*/
 
 * {
@@ -13,12 +16,14 @@ body {
     flex-direction: column;
     /* General Project styles */
     color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 
 }
 
 header {
     background-color: lightcoral;
 }
+
 main {
     background-color: lightblue;
     flex: 1 0 auto;
