--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,8 +131,11 @@ footer {
         main {
             margin-top: 79px;
         }
+    }
 
-        
-
-
+/* Media Query: laptops (992px and higher)*/
+    @media screen and (min-width: 992px) {
+        #menu a:hover{
+            border-bottom: 1px solid #3a3a3a;
+        }
     }
